Started element documentation

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -9,3 +9,4 @@ pages:
     - Calculator: 'examples/calculator.md'
     - Music Player: 'examples/musicplayer.md'
     - Gallery: 'examples/gallery.md'
+  - Elements: 'elements.md'
